[workspace]
resolver = "2"
members = [
  "contracts/nft_market",
  "contracts/nft",
  "contracts/message_bridge",
  "contracts/nft_interface",
  "contracts/message_bridge_interface"
]
exclude = [
  "contracts/message_bridge_buck"
]

[workspace.dependencies]
soroban-sdk = { version = "21.1.1", features = ["alloc"] }
soroban-token-sdk = {version = "21.1.1" }

nft = { path="contracts/nft"}
message_bridge = { path= "contracts/message_bridge" }
nft_market = { path="contracts/nft_market" }
nft_interface = {path = "contracts/nft_interface"}
message_bridge_interface = {path = "contracts/message_bridge_interface"}

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
