[package]
name = "nft_market"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
nft_interface = { workspace = true }
message_bridge_interface = { workspace = true }
serde = { version = "1.0.192", features = ["derive"] }
[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }


